--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 				</section>
 				<section data-markdown>
 					<script type="text/template">
+						## Follow Along: dankerrigan.github.io/cre/index.html
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
 						# Basho
 					</script>
 				</section>
@@ -64,6 +69,11 @@
 				<section data-markdown>
 					<script type="text/template">
 						## Add your own!
+
+						* Riak batch operations
+						* Document compression, encyption/decryption
+						* Document transform
+						* Authentication/Authorization
 					</script>
 				</section>
 				<section data-markdown>
@@ -118,18 +128,15 @@
 				</section>
 				<section data-markdown>
 					<script type="text/template">
-					</script>
-				</section>
-				<section data-markdown>
-					<script type="text/template">
+						## Questions?
 					</script>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
 					## Real Examples
-					* Yokozuna: github.com/basho/yokozuna
-					* Riak Json: github.com/basho-labs/riak_json
-					* multi-put and multi-delete: github.com/dankerrigan/custom_riak_endpoints
+					* Yokozuna: http://github.com/basho/yokozuna
+					* Riak Json: http://github.com/basho-labs/riak_json
+					* multi-put and multi-delete: http://github.com/dankerrigan/custom_riak_endpoints
 					</script>
 				</section>
 
